--- a/app/public/index.html
+++ b/app/public/index.html
@@ -5,24 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat</title>
   <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
   <script defer src="app.js"></script>
 </head>
-<body>
-  <form class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-    <div class="mb-2">
-      <label class="block text-gray-700 text-sm font-bold mb-2" for="message">
-        Send message
-      </label>
-      <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700
-      leading-tight focus:outline-none focus:shadow-outline" id="message" type="text"
-      placeholder="Enter your message">
-      <div class="flex items-center justify-between mt-2">
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2
-        px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-          Send
+<body class="bg-green-950">
+  <div class="container px-6 py-6 m-auto">
+    <form class="rounded mb-4">
+      <div class="mb-2 flex justify-between items-center gap-4 ">
+        <input class="shadow appearance-none border rounded-full text-sm w-full py-2 px-3 text-gray-700
+        leading-tight bg-stone-100 focus:outline-none focus:shadow-outline placeholder:text-xs" type="text"
+        placeholder="Write your message">
+        <button class="transition ease-in-out delay-100 bg-emerald-500	py-2.5 px-2.5 rounded-full
+        fa-regular fa-paper-plane hover:bg-emerald-700
+        hover:cursor-pointer" style="color: #ffffff;" type="submit">
         </button>
       </div>
-    </div>
-  </form>
+    </form>
+    <ul class="bg-white p-4 min-h-screen rounded-lg"></ul>
+  </div>
 </body>
 </html>
