Add Activity informations

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,20 +13,39 @@
   crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script defer src="app.js"></script>
 </head>
-<body class="bg-teal-950">
-  <div class="container bg-teal-950 px-6 py-6 m-auto max-w-screen-md flex flex-col h-screen">
-    <ul class="overflow-auto bg-white p-4 min-h-fit max-h-screen rounded-lg mb-4"></ul>
-    <form class="rounded">
-      <div class="mb-2 flex justify-between items-center gap-4 ">
-        <input class="shadow appearance-none border rounded-full text-sm w-full py-2 px-3 text-gray-700
-        leading-tight bg-stone-100 focus:outline-none focus:shadow-outline placeholder:text-xs" type="text"
-        placeholder="Write your message">
-        <button class="transition ease-in-out delay-100 bg-emerald-500	py-2.5 px-2.5 rounded-full
-        fa-regular fa-paper-plane hover:bg-emerald-700
-        hover:cursor-pointer" style="color: #ffffff;" type="submit">
-        </button>
+<!-- <form class="form-join rounded mb-4">
+    <input class="rounded" type="text" id="name" maxlength="8" placeholder="Your name" size="5" required>
+    <input class="rounded" type="text" id="room" maxlength="8" placeholder="Chat room" size="5" required>
+    <button type="submit" id="join">Join</button>
+  </form> -->
+
+  <body>
+    <video
+      id="background-video"
+      autoplay loop muted
+      src="./assets/sunrise_-_22609 (1080p).mp4"
+      type="video/mp4">
+    </video>
+
+    <div class="dispo-container">
+      <div class="container-perso rounded">
+        <ul class="list-message"></ul>
+        <p class="user-list"></p>
+        <p class="room-list"></p>
+        <p class="activity"></p>
+
+        <form class="rounded">
+          <div class="mb-2 flex justify-between items-center gap-4">
+            <input class="shadow appearance-none border rounded-full text-sm w-full py-2 px-3 text-gray-700
+            leading-tight bg-stone-100 focus:outline-none focus:shadow-outline placeholder:text-xs" type="text"
+            placeholder="Write your message">
+            <button class="transition ease-in-out delay-100 py-2.5 px-2.5 rounded-full
+            fa-regular fa-paper-plane hover:cursor-pointer"
+            style="color: #342eab;" type="submit">
+            </button>
+          </div>
+        </form>
       </div>
-    </form>
-  </div>
-</body>
+    </div>
+  </body>
 </html>
